2007/08/07 niteria
- Texoutsource dialog: added the possibility to open the new file in background or foreground.
- Added the "Outsource Text..." command to the context menu of the editor.

2007/08/06 niteria
- New feature to create a new file from the selected text.
  The new file will be included using \input{}, \include{}, or some user defined command.

2007/07/21 niteria
- Modified Autocompletion behavior to be similar to Visual Studio
  and other editors where only the part before the cursor is considered.
  Furthermore, labels can be completed as well.
- Modified comment behavior to be similar to Visual Studio and other editors.
  We start the comment always at the beginning of the line.

2007/07/05 niteria
- Added some new tips and edited some old ones.
- Fixed Bug 1734335: No automatic saving when file is closed (context menu)
- Fixed some stuff related to crashes with long lines and words.
  The spell checker should not crash anymore on long words. It doesn't care about long lines.
  The latex parser did crash on specific long lines with lots of backslashes etc.
  Now, the latex parser avoids stack overflows by explicitly checking the number of recursive calls.
  However, such long lines (40KB) can not be handled by the painting code in Crystal... This one crashes.
- Fixed some small typos.  

2007/01/23 niteria
- Removed option to disable word wrap due to crashes caused by the spell checker.

2007/01/19 niteria
- Fixed Bug 1443501: Content of TEX file is lost and replaced by that of TCP file
- Fixed Bug 1448046: overwrites .tex file
- Fixed Bug 1637567: Readonly files will be opened more than once
- Fixed Bug 1545851: Buggy code (ifpdf...) in templates
- Fixed Bug 1639785: Command "View Output" is always active
- Fixed Bug 1638562: Profile wizard does not recognize installed Miktex 2.5
- Fixed Bug 1584370: "Stop build" icon cannot be reset (1beta7.01)

2007/01/15 niteria
 - New property page for the editor - includes now the new feature for word wrapping.